--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "@iconify/react": "^3.2.1"
   },
   "devDependencies": {
     "@types/color": "^3.0.3",
