--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@iconify/react": "^3.2.1",
+    "axios": "^0.26.1",
     "color": "^4.2.3",
     "eslint": "^8.13.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -19,6 +20,8 @@
     "framer-motion": "^6.2.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hot-toast": "^2.2.0",
+    "react-intersection-observer": "^8.33.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
