--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "framer-motion": "^6.2.9",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-intersection-observer": "^8.33.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/color": "^3.0.3",
-    "@types/react": "^18.0.1",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^17.0.44",
+    "@types/react-dom": "^17.0.10",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
@@ -37,5 +37,8 @@
     "prettier": "^2.6.2",
     "typescript": "^4.6.3",
     "vite": "^2.9.1"
+  },
+  "resolutions": {
+    "@types/react": "^17.0.44"
   }
 }
