--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "framer-motion": "^6.2.9",
+    "qs": "^6.10.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-intersection-observer": "^8.33.1",
+    "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/color": "^3.0.3",
+    "@types/qs": "^6.9.7",
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.10",
     "@types/styled-components": "^5.1.25",
