--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-intersection-observer": "^8.33.1",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5"
   },
