--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hot-toast": "^2.2.0",
     "react-intersection-observer": "^8.33.1",
     "react-loading": "^2.0.3",
+    "react-markdown": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5"
   },
