--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "@iconify/react": "^3.2.1",
     "axios": "^0.26.1",
     "color": "^4.2.3",
@@ -21,6 +22,7 @@
     "qs": "^6.10.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.29.0",
     "react-hot-toast": "^2.2.0",
     "react-intersection-observer": "^8.33.1",
     "react-loading": "^2.0.3",
