--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "sonar": "node sonarqube-scanner.js"
   },
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
@@ -42,6 +43,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.2",
+    "sonarqube-scanner": "^2.8.1",
     "typescript": "^4.6.3",
     "vite": "^2.9.1"
   },
