--- a/package.json
+++ b/package.json
@@ -13,12 +13,6 @@
     "@iconify/react": "^3.2.1",
     "axios": "^0.26.1",
     "color": "^4.2.3",
-    "eslint": "^8.13.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.4.0",
     "framer-motion": "^6.2.9",
     "qs": "^6.10.3",
     "react": "^17.0.2",
@@ -32,14 +26,21 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@originjs/vite-plugin-federation": "^1.1.4",
     "@types/color": "^3.0.3",
     "@types/qs": "^6.9.7",
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.10",
     "@types/styled-components": "^5.1.25",
+    "@vitejs/plugin-react": "^1.3.0",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
-    "@vitejs/plugin-react": "^1.3.0",
+    "eslint": "^8.13.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.2",
