--- a/package.json
+++ b/package.json
@@ -10,45 +10,46 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
-    "@iconify/react": "^3.2.1",
-    "axios": "^0.26.1",
+    "@iconify/react": "^3.2.2",
+    "axios": "^0.27.2",
     "color": "^4.2.3",
-    "framer-motion": "^6.3.4",
-    "qs": "^6.10.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.29.0",
-    "react-hot-toast": "^2.2.0",
-    "react-intersection-observer": "^8.33.1",
+    "framer-motion": "^7.2.1",
+    "qs": "^6.11.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.34.2",
+    "react-hot-toast": "^2.3.0",
+    "react-intersection-observer": "^9.4.0",
     "react-loading": "^2.0.3",
-    "react-markdown": "^8.0.2",
+    "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
+    "react-spinners": "^0.13.4",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@originjs/vite-plugin-federation": "^1.1.4",
+    "@originjs/vite-plugin-federation": "^1.1.9",
     "@types/color": "^3.0.3",
     "@types/qs": "^6.9.7",
-    "@types/react": "^17.0.44",
-    "@types/react-dom": "^17.0.10",
-    "@types/styled-components": "^5.1.25",
-    "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "@typescript-eslint/parser": "^5.18.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "eslint": "^8.13.0",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
+    "@vitejs/plugin-react": "^2.0.1",
+    "eslint": "^8.22.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.4.0",
-    "prettier": "^2.6.2",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.7.1",
     "sonarqube-scanner": "^2.8.1",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.1"
+    "typescript": "^4.7.4",
+    "vite": "^3.0.9"
   },
   "resolutions": {
-    "@types/react": "^17.0.44"
+    "@types/react": "^18.0.17"
   }
 }
